--- a/citations.bib
+++ b/citations.bib
@@ -26,7 +26,7 @@
 
 @inproceedings{platek2014free,
   title={Free on-line speech recogniser based on Kaldi ASR toolkit producing word posterior lattices},
-  author={Pl{\'a}tek, Ondrej and Jurc{\i}cek, Filip},
+  author={Pl{\'a}tek, Ond{\v{r}}ej and Jur{\v{c}}{\'i}{\v{c}}ek, Filip},
   booktitle={15th Annual Meeting of the Special Interest Group on Discourse and Dialogue},
   pages={108},
   year={2014}
