--- a/conclusion.tex
+++ b/conclusion.tex
@@ -49,6 +49,8 @@ The annotation interface allows administrators to choose golden transcription fr
   that were obtained for the recording.
 Additionally CloudASR also supports addition of manual transcriptions via external job at CrowdFlower.
 
+\IDEA{Mention benefits of the thesis}
+
 \section*{Future work}
 \begin{itemize}
   \item
