--- a/evaluation.tex
+++ b/evaluation.tex
@@ -35,7 +35,7 @@ Moreover, the benchmark shows that the CloudASR platform can achieve better accu
 In the second benchmark latency of CloudASR online mode was measured.
 Support for online speech recognition mode can be seen as a key feature of the CloudASR platform,
   because a low latency is crucial for successfull usage of speech recognition in dialogue systems
-  and there are not so many webservice that provide online speech recognition mode.
+  and there are not so many web services that provide online speech recognition mode.
 
 The reason why the online speech recognition mode is better suited for dialogue systems is
   that it is not neccessary to wait for the whole recording to be recorded
