--- a/thesis.tex
+++ b/thesis.tex
@@ -237,10 +237,10 @@ This thesis presents a cloud platform for automatic speech recognition, CloudASR
 The platform supports both batch and online speech recognition mode
   and it has an annotation interface for transcription of the submitted recordings.
 The key features of the platform are scalability, customizability and easy deployment.
-The benchmarks of the platform show
+Benchmarks of the platform show
   that the platform achieves comparable performance with Google Speech API in terms of latency
   and it can achieve better accuracy on limitted domains.
-Furthermore, the benchmarks shows that the platform is able to handle more than 1000 parallel requests given enough computational resources.
+Furthermore, the benchmarks show that the platform is able to handle more than 1000 parallel requests given enough computational resources.
 
 
 % abstrakt v rozsahu 80-200 slov v angličtině; nejedná se však o překlad
