Capital letters fixed in citations bib.

--- a/citations.bib
+++ b/citations.bib
@@ -1,5 +1,5 @@
 @article{merkel2014docker,
-  title={Docker: lightweight linux containers for consistent development and deployment},
+  title="{Docker: lightweight linux containers for consistent development and deployment}",
   author={Merkel, Dirk},
   journal={Linux Journal},
   volume={2014},
@@ -10,22 +10,22 @@
 }
 
 @inproceedings{hindman2011mesos,
-  title={Mesos: A Platform for Fine-Grained Resource Sharing in the Data Center.},
+  title="{Mesos: A Platform for Fine-Grained Resource Sharing in the Data Center.}",
   author={Hindman, Benjamin and Konwinski, Andy and Zaharia, Matei and Ghodsi, Ali and Joseph, Anthony D and Katz, Randy H and Shenker, Scott and Stoica, Ion},
-  booktitle={NSDI},
+  booktitle="{NSDI}",
   volume={11},
   pages={22--22},
   year={2011}
 }
 
 @article{povey2011kaldi,
-  title={The Kaldi speech recognition toolkit},
+  title="{The Kaldi speech recognition toolkit}",
   author={Povey, Daniel and Ghoshal, Arnab and Boulianne, Gilles and Burget, Luk{\'a}{\v{s}} and Glembek, Ond{\v{r}}ej and Goel, Nagendra and Hannemann, Mirko and Motl{\'\i}{\v{c}}ek, Petr and Qian, Yanmin and Schwarz, Petr and others},
   year={2011}
 }
 
 @inproceedings{platek2014free,
-  title={Free on-line speech recogniser based on Kaldi ASR toolkit producing word posterior lattices},
+  title="{Free on-line speech recogniser based on Kaldi ASR toolkit producing word posterior lattices}",
   author={Pl{\'a}tek, Ond{\v{r}}ej and Jur{\v{c}}{\'i}{\v{c}}ek, Filip},
   booktitle={15th Annual Meeting of the Special Interest Group on Discourse and Dialogue},
   pages={108},
@@ -33,15 +33,15 @@
 }
 
 @inproceedings{bergstra2010theano,
-  title={Theano: A CPU and GPU math compiler in Python},
+  title="{Theano: A CPU and GPU math compiler in Python}",
   author={Bergstra, James and Breuleux, Olivier and Bastien, Fr{\'e}d{\'e}ric and Lamblin, Pascal and Pascanu, Razvan and Desjardins, Guillaume and Turian, Joseph and Warde-Farley, David and Bengio, Yoshua},
-  booktitle={Proc. 9th Python in Science Conf},
+  booktitle="{Proc. 9th Python in Science Conf}",
   pages={1--7},
   year={2010}
 }
 
 @article{hewitt1977viewing,
-  title={Viewing control structures as patterns of passing messages},
+  title="{Viewing control structures as patterns of passing messages}",
   author={Hewitt, Carl},
   journal={Artificial intelligence},
   volume={8},
@@ -52,13 +52,13 @@
 }
 
 @misc{fowler2004inversion,
-  title={Inversion of control containers and the dependency injection pattern},
+  title="{Inversion of control containers and the dependency injection pattern}",
   author={Fowler, Martin},
   year={2004}
 }
 
 @book{gamma1993design,
-  title={Design patterns: Abstraction and reuse of object-oriented design},
+  title="{Design patterns: Abstraction and reuse of object-oriented design}",
   author={Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
   year={1993},
   publisher={Springer}
@@ -72,53 +72,53 @@
 }
 
 @article{korvas2014vystadial,
-  title={Vystadial 2013--Czech data},
+  title="{Vystadial 2013--Czech data}",
   author={Korvas, Mat{\v{e}}j and Pl{\'a}tek, Ond{\v{r}}ej and Du{\v{s}}ek, Ond{\v{r}}ej and {\v{Z}}ilka, Luk{\'a}{\v{s}} and Jur{\v{c}}{\'\i}{\v{c}}ek, Filip},
   year={2014},
   publisher={Faculty of Mathematics and Physics, Charles University in Prague}
 }
 
 @inproceedings{sperber2014fly,
-  title={On-the-Fly User Modeling for Cost-Sensitive Correction of Speech Transcripts},
+  title="{On-the-Fly User Modeling for Cost-Sensitive Correction of Speech Transcripts}",
   author={Sperber, Matthias and Neubig, Graham and Nakamura, Satoshi and Waibel, Alex},
-  booktitle={Spoken Language Technology Workshop (SLT)},
+  booktitle="{Spoken Language Technology Workshop (SLT)}",
   year={2014}
 }
 
 @inproceedings{gong2010press,
-  title={Press: Predictive elastic resource scaling for cloud systems},
+  title="{Press: Predictive elastic resource scaling for cloud systems}",
   author={Gong, Zhenhuan and Gu, Xiaohui and Wilkes, John},
-  booktitle={Network and Service Management (CNSM), 2010 International Conference on},
+  booktitle="{Network and Service Management (CNSM), 2010 International Conference on}",
   pages={9--16},
   year={2010},
   organization={IEEE}
 }
 
 @article{fowler2006continuous,
-  title={Continuous integration},
+  title="{Continuous integration}",
   author={Fowler, Martin and Foemmel, Matthew},
   journal={Thought-Works) http://www.thoughtworks.com/Continuous Integration. pdf},
   year={2006}
 }
 
 @book{humble2010continuous,
-  title={Continuous delivery: reliable software releases through build, test, and deployment automation},
+  title="{Continuous delivery: reliable software releases through build, test, and deployment automation}",
   author={Humble, Jez and Farley, David},
   year={2010},
   publisher={Pearson Education}
 }
 
 @inproceedings{jurcicek2014alex,
-  title={Alex: A Statistical Dialogue Systems Framework},
+  title="{Alex: A Statistical Dialogue Systems Framework}",
   author={Jur{\v{c}}{\'\i}{\v{c}}ek, Filip and Du{\v{s}}ek, Ond{\v{r}}ej and Pl{\'a}tek, Ond{\v{r}}ej and {\v{Z}}ilka, Luk{\'a}{\v{s}}},
-  booktitle={Text, Speech and Dialogue},
+  booktitle="{Text, Speech and Dialogue}",
   pages={587--594},
   year={2014},
   organization={Springer}
 }
 
 @book{young1997htk,
-  title={The HTK book},
+  title="{The HTK book}",
   author={Young, Steve and Evermann, Gunnar and Gales, Mark and Hain, Thomas and Kershaw, Dan and Liu, Xunying and Moore, Gareth and Odell, Julian and Ollason, Dave and Povey, Dan and others},
   volume={2},
   year={1997},
@@ -126,15 +126,15 @@
 }
 
 @inproceedings{rybach2009rwth,
-  title={The RWTH aachen university open source speech recognition system.},
+  title="{The RWTH Aachen University Open Source Speech Recognition System}",
   author={Rybach, David and Gollan, Christian and Heigold, Georg and Hoffmeister, Bj{\"o}rn and L{\"o}{\"o}f, Jonas and Schl{\"u}ter, Ralf and Ney, Hermann},
-  booktitle={Interspeech},
+  booktitle="{Interspeech}",
   pages={2111--2114},
   year={2009}
 }
 
 @article{lee1990overview,
-  title={An overview of the SPHINX speech recognition system},
+  title="{An overview of the SPHINX speech recognition system}",
   author={Lee, K-F and Hon, H-W and Reddy, Raj},
   journal={Acoustics, Speech and Signal Processing, IEEE Transactions on},
   volume={38},
@@ -142,4 +142,10 @@
   pages={35--45},
   year={1990},
   publisher={IEEE}
+}
+
+@article{lee2001julius,
+  title="{Julius---an open source real-time large vocabulary recognition engine}",
+  author={Lee, Akinobu and Kawahara, Tatsuya and Shikano, Kiyohiro},
+  year={2001}
 }
