--- a/bibliography.tex
+++ b/bibliography.tex
@@ -2,6 +2,7 @@
 %%% normou pro diplomovou práci je ISO 690. Jména časopisů lze uvádět zkráceně, ale jen
 %%% v kodifikované podobě. Všechny použité zdroje a prameny musí být řádně citovány.
 
+\phantomsection
 \addcontentsline{toc}{chapter}{\bibname}
 \nocite{*}
 \bibliography{citations}{}
