Language models section added.

--- a/citations.bib
+++ b/citations.bib
@@ -149,3 +149,49 @@
   author={Lee, Akinobu and Kawahara, Tatsuya and Shikano, Kiyohiro},
   year={2001}
 }
+
+@inproceedings{kneser1995improved,
+  title={Improved backing-off for m-gram language modeling},
+  author={Kneser, Reinhard and Ney, Hermann},
+  booktitle={Acoustics, Speech, and Signal Processing, 1995. ICASSP-95., 1995 International Conference on},
+  volume={1},
+  pages={181--184},
+  year={1995},
+  organization={IEEE}
+}
+
+@article{gale1995good,
+  title={Good-Turing smoothing without tears},
+  author={Gale, William and Sampson, Geoffrey},
+  journal={Journal of Quantitative Linguistics},
+  volume={2},
+  number={3},
+  pages={217--237},
+  year={1995}
+}
+
+@article{jelinek1980interpolated,
+  title={Interpolated estimation of Markov source parameters from sparse data},
+  author={Jelinek, Frederick},
+  journal={Pattern recognition in practice},
+  year={1980},
+  publisher={North-Holland}
+}
+
+@article{bengio2003neural,
+  title={A neural probabilistic language model},
+  author={Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Janvin, Christian},
+  journal={The Journal of Machine Learning Research},
+  volume={3},
+  pages={1137--1155},
+  year={2003},
+  publisher={JMLR. org}
+}
+
+@inproceedings{mikolov2010recurrent,
+  title={Recurrent neural network based language model.},
+  author={Mikolov, Tomas and Karafi{\'a}t, Martin and Burget, Lukas and Cernock{\`y}, Jan and Khudanpur, Sanjeev},
+  booktitle={INTERSPEECH 2010, 11th Annual Conference of the International Speech Communication Association, Makuhari, Chiba, Japan, September 26-30, 2010},
+  pages={1045--1048},
+  year={2010}
+}
