--- a/citations.bib
+++ b/citations.bib
@@ -195,3 +195,49 @@
   pages={1045--1048},
   year={2010}
 }
+
+@article{welch2003hidden,
+  title={Hidden Markov models and the Baum-Welch algorithm},
+  author={Welch, Lloyd R},
+  journal={IEEE Information Theory Society Newsletter},
+  volume={53},
+  number={4},
+  pages={10--13},
+  year={2003}
+}
+
+@inproceedings{franzini1990connectionist,
+  title={Connectionist Viterbi training: A new hybrid method for continuous speech recognition},
+  author={Franzini, Michael and Lee, K-F and Waibel, Alex},
+  booktitle={Acoustics, Speech, and Signal Processing, 1990. ICASSP-90., 1990 International Conference on},
+  pages={425--428},
+  year={1990},
+  organization={IEEE}
+}
+
+@inproceedings{williams2011crowd,
+  title={Crowd-sourcing for difficult transcription of speech},
+  author={Williams, Jason D and Melamed, I Dan and Alonso, Tirso and Hollister, Barbara and Wilpon, Jay},
+  booktitle={Automatic Speech Recognition and Understanding (ASRU), 2011 IEEE Workshop on},
+  pages={535--540},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{novotney2010cheap,
+  title={Cheap, fast and good enough: Automatic speech recognition with non-expert transcription},
+  author={Novotney, Scott and Callison-Burch, Chris},
+  booktitle={Human Language Technologies: The 2010 Annual Conference of the North American Chapter of the Association for Computational Linguistics},
+  pages={207--215},
+  year={2010},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{marge2010using,
+  title={Using the amazon mechanical turk for transcription of spoken language},
+  author={Marge, Matthew and Banerjee, Satanjeev and Rudnicky, Alexander I},
+  booktitle={Acoustics Speech and Signal Processing (ICASSP), 2010 IEEE International Conference on},
+  pages={5270--5273},
+  year={2010},
+  organization={IEEE}
+}
