ASR chapter modified.

--- a/citations.bib
+++ b/citations.bib
@@ -241,3 +241,10 @@
   year={2010},
   organization={IEEE}
 }
+
+@book{frederick1997statistical,
+  title={Statistical methods for speech recognition},
+  author={Frederick Jelinek},
+  year={1997},
+  publisher={MIT press}
+}
