--- a/asr.tex
+++ b/asr.tex
@@ -1,49 +1,108 @@
 \chapter{Automatic Speech Recognition}
-\blindtext
+The task of the automatic speech recognition system is to "pick the most likely word sequence $\widehat{W}$
+  given the observed acoustic evidence A" \cite{frederick1997statistical}.
+Therefore, speech recognition can be described as a following formula:
+
+\begin{equation}
+  \label{eq:1}
+  \widehat{W} = \arg \max_{W} P(W|A)
+\end{equation}
+
+By using Bayes' formula of probability theory,
+  right-hand side of the Equation~\ref{eq:1} can be rewritten in a following way:
+
+\begin{equation}
+ \widehat{W} = \arg \max_{W} \frac{P(A|W) P(W)}{P(A)}
+\end{equation}
+
+Since the numerator P(A) is constant regarding the maximization,
+  it can be omitted to get the final equation:
+
+\begin{equation}
+  \label{eq:asr}
+  \widehat{W} = \arg \max_{W} P(A|W) P(W)
+\end{equation}
+
+The probability $P(A|W)$ is called acoustic model and the probability $P(W)$ is called language model.
+In the sections \textbf{Acoustic Models} and \textbf{Language Models} computation of these probabilities will be described in more detail.
+After that, \textbf{Decoding} section will describe how the Formula~\ref{eq:asr} is used to find the desired word sequence.
+Then, sections \textbf{Open-Source ASR Tools} and \textbf{Public ASR services} will present technologies related to CloudASR.
+This chapter ends with \textbf{Obtaining Manual Transcriptions} section,
+  which describes how manual transcriptions can be obtained with crowd--sourcing.
+
 
 \section{Acoustic Models}
-\blindtext
-\blindtext
+\BLIND
+\BLIND
+
+Baum--Welch \cite{welch2003hidden}
+Viterbi training \cite{franzini1990connectionist}
 
 \section{Language Models}
-\blindtext
-\blindtext
+The task of the language model $P(W)$ in speech recognition is
+  to determine how likely are the sequences of words $w_1,\dots,w_m$ that sound alike
+  by assigning a probability to each sequence.
+Using the Bayes' rule, $P(W)$ can be seen as:
+
+\begin{equation}
+  P(W) = P(w_1,\dots,w_m) = \prod\limits_{i=1}^{m} P(w_i|w_1,\dots,w_{i-1})
+\end{equation}
+
+Since the probability $P(w_i|w_1,\dots,w_{i-1})$ has just too many arguments
+  and the probability does not necessarily depends on the entire history,
+  the history is put into equivalence classes $\phi(w_1,\dots,w_{i-1})$.
+This results into the following formula:
+
+\begin{equation}
+  P(w_1,\dots,w_m) \approx \prod\limits_{i=1}^{m} P(w_i|\phi(w_1,\dots,w_{i_1}))
+\end{equation}
+
+Traditionally, n-gram language models,
+  which use the following history equivalence classes $\phi(w_1,\dots,w_{i-1}) = w_{i-(n-1)},\dots,w_{i-1}$,
+  are used in speech recognition tasks.
+Thus, the n-gram language model becomes:
+
+\begin{equation}
+  P(w_1,\dots,w_m) \approx \prod\limits_{i=1}^{m} P(w_i|w_{i-(n-1)},\dots,w_{i-1})
+\end{equation}
+
+Where the probabilities $P(w_i|w_{i-(n-1)},\dots,w_{w-1})$ are estimated from the relative frequencies of n-grams in the training data with the following formula:
+\begin{equation}
+  \label{eq:2}
+  P(w_i|w_{i-(n-1)},\dots,w_{i-1}) = \frac{c(w_{i-(n-1)},\dots,w_i)}{c(w_{i-(n-1)},\dots,w_{i-1})}
+\end{equation}
+
+
+Since the numerator of the Equation~\ref{eq:2} can be zero due to data sparsity problem,
+  several smoothing techniques such as
+  Jelinek--Mercer \cite{jelinek1980interpolated},
+  Good--Turing \cite{gale1995good}
+  or Kneser--Ney \cite{kneser1995improved} are often used to estimate the higher n-gram relative frequencies from the lower n-gram frequencies.
+
+Recently, artificial neural networks have been also successfully used to tackle the data sparsity problem \cite{bengio2003neural}.
+For instance, the recurrent neural network based language models yielded state-of-the-art results in terms of WER in speech recognition \cite{mikolov2010recurrent}.
+
 
 \section{Decoding}
-\blindtext
+\BLIND
 
-\subsection{Batch Decoding}
-\blindtext
+\textbf{Batch Decoding}
+\BLIND
 
-\subsection{Online Decoding}
-\blindtext
-
-
-\section{Transcriptions}
-\blindtext
-
-\section{Transcriptions via Crowdsourcing}
-\blindtext
-
-\subsection{Amazon Mechanical Turk}
-\blindtext
-
-\subsection{CrowdFlower}
-\blindtext
+\textbf{Online Decoding}
+\BLIND
 
 
-\section{Open-Source ASR tools}
+\section{Open-Source ASR Tools}
 
 
-\subsection{HTK}
-The HTK \cite{young1997htk} toolkit
+The \textbf{HTK} \cite{young1997htk} toolkit
+\BLIND
 
-\subsection{Julius}
-Julius \cite{lee2001julius}
-\blindtext
+\textbf{Julius} \cite{lee2001julius}
+\BLIND
 
-\subsection{Kaldi}
-Kaldi \cite{povey2011kaldi} is a free, open-source toolkit for speech recognition written in C++.
+\textbf{Kaldi} \cite{povey2011kaldi} is a free, open-source toolkit for speech recognition written in C++.
 Its speech recognition system is based on finite-state transducers
   and it supports modelling of arbitrary phonetic-context sizes,
   acoustic modelling with subspace Gaussian mixture models (SGMM)
@@ -54,8 +113,7 @@ Furthermore, there is also a Python wrapper for Kaldi called PyKaldi \cite{plate
   which supports the online speech recognition.
 CloudASR uses PyKaldi as a default speech recognition system.
 
-\subsection{RWTH}
-RWTH \cite{rybach2009rwth} is a publicly available speech recognition toolkit developed at Aachen University.
+\textbf{RWTH} \cite{rybach2009rwth} is a publicly available speech recognition toolkit developed at Aachen University.
 It includes state of the art speech recognition technology for acoustic model training and decoding.
 Besides, its notable components are speaker adaptation,
   speaker adaptive training,
@@ -86,6 +144,7 @@ Additionally,
   is the second provider of the API for speech recognition.
 It provides software development kits for Windows and mobile applications.
 It also has a version that can be deployed on a server and used as a API for other applications.
+
 
 The last API provider that will be mentioned here is \textbf{wit.ai}\footnote{\url{https://wit.ai/}}.
 It supports 11 languages via an API similar to Google Speech API, see Figure~\ref{fig:wit-ai-request} for an example,
