Evaluation section added.

--- a/asr.tex
+++ b/asr.tex
@@ -89,9 +89,34 @@ For instance, the recurrent neural network based language models yielded state-o
 
 
 \subsection{Speech Decoding}
+
+
 \BLIND
 \BLIND
 
+\subsection{Evaluation}
+\textbf{Word error rate (WER)} is the most common metric used to evaluate the performance of ASR systems.
+It is computed as a minimum edit distance on words between one-best ASR output and a reference transcription divided by the number of words in the reference transcription.
+
+\begin{equation}
+  WER = \frac{S + D + I}{N}
+\end{equation}
+
+where:
+\begin{itemize}
+  \item S is the number of substitutions,
+  \item D is the number of deletions,
+  \item I is the number od insertions,
+  \item N is the number of words in reference
+\end{itemize}
+
+Metrics that are used to evaluate speed of ASR systems are \textbf{Real Time Factor (RTF)} and \textbf{Latency}.
+RTF is computed as a time needed to process the recording R by the ASR system divided by the length of the recording R.
+Latency is a delay between the end of the recording and the end of the recognition.
+
+\begin{equation}
+  RTF = \frac{time(decode(R))}{length(R)}
+\end{equation}
 
 \section{Open-Source ASR Tools}
 In the following section some of the open-source ASR tools will be described.
